# breadpad

./: .gitignore  Cargo.toml  LICENSE  README.md  bakery.toml  breadpad.example.toml  breadpadcli  svgs.txt
.forgejo/workflows/: mirror.yml  package.yml
.github/workflows/: release.yml
breadman/: Cargo.toml
breadman/src/: editor.rs  main.rs
breadman/src/views/: archive.rs  errors.rs  mod.rs  settings.rs  upcoming.rs
breadpad/: Cargo.toml
breadpad-shared/: Cargo.toml
breadpad-shared/src/: ai.rs  calendar.rs  classifier.rs  config.rs  lib.rs  parser.rs  scheduler.rs  store.rs  theme.rs  types.rs  util.rs
breadpad-shared/tests/: classifier.rs  config.rs  pipeline.rs  store.rs
breadpad-test/: Cargo.toml  corpus.json
breadpad-test/src/: main.rs
breadpad/src/: main.rs
packaging/arch/: PKGBUILD
