[package]
name = "breadman"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "breadman"
path = "src/main.rs"

[dependencies]
breadpad-shared = { path = "../breadpad-shared" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
gtk4.workspace = true
dirs.workspace = true
futures-channel = "0.3"
