[package]
name = "breadpad-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
# Path dep for local dev; replace with git dep on first tag:
# bread-theme = { git = "https://github.com/Breadway/bread-ecosystem", tag = "theme-v0.1.0" }
bread-theme = { path = "../../bread-ecosystem/bread-theme" }
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rrule.workspace = true
tokio.workspace = true
zbus.workspace = true
ort.workspace = true
tokenizers.workspace = true
ndarray.workspace = true
toml.workspace = true
dirs.workspace = true
regex.workspace = true
ureq.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ical = "0.11"

[dev-dependencies]
tempfile = "3"
