[package]
name = "breadpad-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "breadpad-test"
path = "src/main.rs"

[dependencies]
breadpad-shared = { path = "../breadpad-shared" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
ort = { workspace = true }
dirs = { workspace = true }
