[package]
name = "breadpad"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "breadpad"
path = "src/main.rs"

[dependencies]
breadpad-shared = { path = "../breadpad-shared" }
anyhow.workspace = true
ort.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
hyprland.workspace = true
dirs.workspace = true
tokio.workspace = true
